--- a/src/App.css
+++ b/src/App.css
@@ -4,18 +4,19 @@
 
 .App-logo {
   height: 40vmin;
+  max-height: 100px;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 55s linear;
   }
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -36,3 +37,5 @@
     transform: rotate(360deg);
   }
 }
+
+
